<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="empty"></string>
	<string name="action_ok">OK</string>
    <string name="cnr">National Research Council</string>
    <string name="app_name">Chlorophyll camera</string>
    <string name="image_content">image content for rgb</string>
    <string name="action_add_capture">Add</string>
    <string name="action_gallery">Gallery</string>
    <string name="action_camera">Camera</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">Info</string>
    <string name="action_gps">GPS</string>
    <string name="action_done">Done</string>
    <string name="action_white">White</string>
    <string name="action_add">Add new equation</string>
    <string name="action_equation">Equations</string>
    <string name="action_pick_same_image">Pick same image</string>
    <string name="action_logs">Show logs</string>
    <string name="title_equation_list">Equations</string>
    <string name="title_equation_detail">Equation Detail</string>
    <string name="title_activity_result">Result</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_logs">Logs</string>
    <string name="result_date">Date and time</string>
    <string name="result_specie">Specie</string>
    <string name="result_location">Location</string>
    <string name="result_count">Leaf count</string>
    <string name="result_rgb">Leaf RGB</string>
    <string name="result_average_rgb">Average RGB</string> 
    <string name="result_chlorophyll">Leaf Chlorophyll</string>
    <string name="result_average_chlorophyll">Average Chlorophyll</string>  
    <string name="result_misura">%s &#181;g cm-2</string> 
</resources>
