<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/image_content"
        android:src="@drawable/cnr_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/cnr"
        android:textColor="#6cedc1"
        android:shadowColor="@android:color/background_dark"
        android:shadowDx="-1"
        android:shadowDy="-1"
        android:shadowRadius="2"
        android:textSize="20sp"
        android:typeface="monospace" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:shadowColor="@android:color/background_dark"
        android:shadowDx="-1"
        android:shadowDy="-1"
        android:shadowRadius="2"
        android:text="@string/app_name"
        android:textColor="#6cedc1"
        android:textSize="25sp"
        android:textStyle="italic"
        android:typeface="monospace" />

</RelativeLayout>