<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <LinearLayout
        android:id="@+id/bottom_toolbar"
 		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_alignParentBottom="true">

	    <View
	        android:layout_width="fill_parent"
	        android:layout_height="1dip"
	        android:background="@android:color/holo_blue_dark"/>		
		<LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
			android:gravity="center_horizontal">

			<Button
			    android:id="@+id/resultButtonAdd"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:visibility="invisible"
			    android:drawableLeft="@android:drawable/ic_menu_add"
			    android:text="@string/action_add_capture"
			    android:textAppearance="?android:attr/textAppearanceSmall" />

		    <Button
		        android:id="@+id/resultButtonSave"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
		        android:drawableLeft="@android:drawable/ic_menu_save"
		        android:text="@string/action_save"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
		    	    
		</LinearLayout>
    </LinearLayout>    

	<ScrollView android:id="@+id/scrollView1"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
		android:layout_above="@id/bottom_toolbar"
	    style="@style/LoginFormContainer" >
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
			<!-- result_date -->
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/result_date"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:textStyle="italic"
		        android:typeface="monospace" />

			<TextView
		        android:id="@+id/result_date"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:paddingLeft="5dip"
		        android:textAppearance="?android:attr/textAppearanceSmall"/>
	
		    <View
		        android:layout_width="fill_parent"
		        android:layout_height="0.5dip"
		        android:background="@android:color/holo_blue_dark"/>		
	        
			<!-- result_equation -->
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/result_specie"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:textStyle="italic"
		        android:typeface="monospace" />
	
		    <TextView
		        android:id="@+id/result_equation"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:paddingLeft="5dip"
		        android:textAppearance="?android:attr/textAppearanceSmall"/>
	
		    <View
		        android:layout_width="fill_parent"
		        android:layout_height="0.5dip"
		        android:background="@android:color/holo_blue_dark"/>		
		
		    <!-- result_location -->    
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/result_location"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:textStyle="italic"
		        android:typeface="monospace" />
		    <TextView
		        android:id="@+id/result_location"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:paddingLeft="5dip"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
		    <View
		        android:layout_width="fill_parent"
		        android:layout_height="0.5dip"
		        android:background="@android:color/holo_blue_dark"/>		
		    
		    <!-- result_count -->    
		    <LinearLayout
			    android:id="@+id/result_count_group"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:visibility="gone"
		        android:orientation="vertical">

			    <TextView
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/result_count"
			        android:textAppearance="?android:attr/textAppearanceMedium"
			        android:textStyle="italic"
			        android:typeface="monospace" />
			    <TextView
			        android:id="@+id/result_count"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:paddingLeft="5dip"
			        android:textAppearance="?android:attr/textAppearanceSmall" />
			    <View
			        android:layout_width="fill_parent"
			        android:layout_height="0.5dip"
			        android:background="@android:color/holo_blue_dark"/>		
			</LinearLayout>		    		
		    <!-- result_rgb -->    
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/result_rgb"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:textStyle="italic"
		        android:typeface="monospace" />
		    <TextView
		        android:id="@+id/result_rgb"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:paddingLeft="5dip"
		        android:textAppearance="?android:attr/textAppearanceSmall"/>
		    <View
		        android:layout_width="fill_parent"
		        android:layout_height="0.5dip"
		        android:background="@android:color/holo_blue_dark"/>		
		    <!-- average_rgb -->    
		    <LinearLayout
			    android:id="@+id/result_average_rgb_group"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:visibility="gone"
		        android:orientation="vertical">

			    <TextView
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/result_average_rgb"
			        android:textAppearance="?android:attr/textAppearanceMedium"
			        android:textStyle="italic"
			        android:typeface="monospace" />
			    <TextView
			        android:id="@+id/result_average_rgb"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:paddingLeft="5dip"
			        android:textAppearance="?android:attr/textAppearanceSmall" />
			    <View
			        android:layout_width="fill_parent"
			        android:layout_height="0.5dip"
			        android:background="@android:color/holo_blue_dark"/>		
			</LinearLayout>		    		
		    		    
		    <!-- result_chlorophyll -->    
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/result_chlorophyll"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:textStyle="italic"
		        android:typeface="monospace" />
		    <TextView
		        android:id="@+id/result_chlorophyll"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:paddingLeft="5dip"
		        android:textAppearance="?android:attr/textAppearanceSmall"/>
		    <View
		        android:layout_width="fill_parent"
		        android:layout_height="0.5dip"
		        android:background="@android:color/holo_blue_dark"/>		
		    <!-- average_chlorophyll -->    
		    <LinearLayout
			    android:id="@+id/result_average_chlorophyll_group"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:visibility="gone"
		        android:orientation="vertical">

			    <TextView
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/result_average_chlorophyll"
			        android:textAppearance="?android:attr/textAppearanceMedium"
			        android:textStyle="italic"
			        android:typeface="monospace" />
			    <TextView
			        android:id="@+id/result_average_chlorophyll"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:paddingLeft="5dip"
			        android:textAppearance="?android:attr/textAppearanceSmall" />
			    <View
			        android:layout_width="fill_parent"
			        android:layout_height="0.5dip"
			        android:background="@android:color/holo_blue_dark"/>		
			</LinearLayout>		    		
		    		    
		</LinearLayout>
	</ScrollView>
</RelativeLayout>	